# py-template-repo

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python_tests.yml
app/subpackage_one/: __init__.py  module_2.py
src/: app.py  cli.py  config.py
src/subpackage_one/: __init__.py  module_1.py  module_2.py
src/subpackage_two/: __init__.py  module_1.py  url_check.py
tests/subpackage_one/: test_module_1.py
